--- a/Cluster Setup/1. Security Benchmark.md
+++ b/Cluster Setup/1. Security Benchmark.md
@@ -32,7 +32,20 @@ The primary function of CIS-CAT Lite is to **evaluate a system's security config
 | **Reporting Formats** | Restricted mainly to HTML. | Includes CSV, XML, JSON, text, and HTML. |
 | **Remediation** | Provides manual remediation steps only. | Includes content for automated remediation implementation. |
 
+## Example
 
+**Command to run CIS-CAT Pro**
 ```bash
 sh /root/Assessor/Assessor-CLI.sh  -i -rd /var/www/html/ -nts -rp index.html
 ```
+
+**Download the CIS CAT tool’ from the below link:**
+- https://www.cisecurity.org/cybersecurity-tools/cis-cat-pro/cis-benchmarks-supported-by-cis-cat-pro/
+
+**Download the CIS benchmark PDF’s from the below link:**
+- https://downloads.cisecurity.org/#/
+
+**Download the CIS CAT Lite tool from the below link:**
+
+- https://learn.cisecurity.org/cis-cat-lite
+
