--- a/Cluster Setup/2. kube-bench.md
+++ b/Cluster Setup/2. kube-bench.md
@@ -42,3 +42,73 @@ The output is structured and easy to read, highlighting three key statuses:
 | **FAIL**  | The configuration violates the CIS recommendation. This indicates a potential security issue. |
 | **INFO**  | An informational check that doesn't have a pass/fail state. These are often used for checks that require manual inspection. |
 | **WARN**  | A check that needs manual investigation or a specific setting to be confirmed. Similar to INFO, but usually for a more critical setting. |
+
+## 🛠️ Install Kube-bench Using the Repository (Debian/Ubuntu)
+
+The best way to ensure you have the latest version and manage dependencies easily on Debian-based systems (like Ubuntu) is to add the official repository from Aqua Security.
+
+### Documentation
+
+- https://github.com/aquasecurity/kube-bench
+
+
+### 🛠️ Install Kube-bench Using the Repository (Debian/Ubuntu)
+The best way to ensure you have the latest version and manage dependencies easily on Debian-based systems (like Ubuntu) is to add the official repository from Aqua Security.
+
+**📥 1. Add the Aqua Security Repository**
+
+First, install the necessary tools to handle HTTPS repositories, and then add the GPG key for the repository.
+
+
+```bash
+# 1. Install dependencies
+sudo apt-get update
+sudo apt-get install -y apt-transport-https ca-certificates curl
+
+# 2. Add the Aqua Security GPG Key
+curl -s https://aquasecurity.github.io/kube-bench/apt/PublicKey | sudo apt-key add -
+
+# 3. Add the repository to your sources list
+echo "deb [arch=amd64] https://aquasecurity.github.io/kube-bench/apt/ $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/kube-bench.list
+```
+
+**📦 2. Install Kube-bench**
+
+Once the repository is configured, you can use the standard package manager to install Kube-bench.
+
+```bash
+# 1. Update the package list to include the new repository
+sudo apt-get update
+
+# 2. Install kube-bench
+sudo apt-get install -y kube-bench
+```
+
+**✅ 3. Validate the Installation**
+
+Confirm that the installation was successful and verify the installed version.
+
+```bash
+# Validate the version
+kube-bench version
+
+# Run the benchmark
+kube-bench run 
+
+# Check for the test
+kube-bench --check="1.3.1"
+kube-bench run --targets="master,etcd"
+````
+
+**Install manually**
+
+```bash
+# Download the package
+curl -L https://github.com/aquasecurity/kube-bench/releases/download/v0.12.0/kube-bench_0.12.0_linux_amd64.deb -o kube-bench_0.12.0_linux_amd64.deb
+
+# Install kube-bench
+sudo dpkg -i kube-bench_0.12.0_linux_amd64.deb
+
+# Validate of the version
+kube-bench version
+```
